Создано с помощью Colaboratory

--- a/Test_Notebook.ipynb
+++ b/Test_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+zZKxdltBYo4BiSO7ztrC",
+      "authorship_tag": "ABX9TyN6nQl9VRLe2k9TRycw7Xez",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print()"
+      ],
       "metadata": {
         "id": "2KyyHxjvM1Gd"
       },
